# chispa

./: .coverage  .coverage.Florians-MacBook-Pro.local.18837.XACWbthx  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  NOTICE-binary.md  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: ci.yml  mkdocs.yml  release.yml  test-release.yml
chispa/: __init__.py  bcolors.py  column_comparer.py  common_enums.py  dataframe_comparer.py  dataframe_generator.py  dataframe_transformer.py  default_formats.py  flatten.py  number_helpers.py  prettytable.py  row_comparer.py  rows_comparer.py  schema_comparer.py  six.py  spark.py  structfield_comparer.py  terminal_str_formatter.py
chispa/formatting/: __init__.py  format_string.py  formats.py  formatting_config.py  terminal_string_formatter.py
ci/: environment-py39.yml
docs/: gen_ref_pages.py
openspec/changes/archive/2026-03-09-fix-160-ignore-rows-order-struct/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-fix-160-ignore-rows-order-struct/specs/ignore-row-order-struct/: spec.md
openspec/changes/archive/2026-03-23-spark-testing-variable/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-spark-testing-variable/specs/spark-testing/: spec.md
openspec/changes/archive/2026-03-23-test-ignore-nullable-metadata-array/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-test-ignore-nullable-metadata-array/specs/ignore-nullable-metadata-array/: spec.md
openspec/changes/archive/2026-03-24-fix-nan-array-equality/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-fix-nan-array-equality/specs/allow-nan-equality/: spec.md
openspec/changes/archive/2026-03-24-fix-nan-array-equality/specs/nan-array-equality/: spec.md
openspec/changes/archive/2026-03-24-plan-readme-alignment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-24-plan-readme-alignment/specs/allow-nan-equality/: spec.md
openspec/changes/archive/2026-03-24-plan-readme-alignment/specs/readme-alignment/: spec.md
openspec/specs/allow-nan-equality/: spec.md
openspec/specs/nan-array-equality/: spec.md
openspec/specs/readme-alignment/: spec.md
reference/SUMMARY/: index.html
reference/chispa/: index.html
reference/chispa/bcolors/: index.html
reference/chispa/column_comparer/: index.html
reference/chispa/common_enums/: index.html
reference/chispa/dataframe_comparer/: index.html
reference/chispa/default_formats/: index.html
reference/chispa/formatting/: index.html
reference/chispa/formatting/format_string/: index.html
reference/chispa/formatting/formats/: index.html
reference/chispa/formatting/formatting_config/: index.html
reference/chispa/number_helpers/: index.html
reference/chispa/prettytable/: index.html
reference/chispa/row_comparer/: index.html
reference/chispa/rows_comparer/: index.html
reference/chispa/schema_comparer/: index.html
reference/chispa/six/: index.html
reference/chispa/structfield_comparer/: index.html
reference/chispa/terminal_str_formatter/: index.html
search/: search_index.json
tests/: conftest.py  spark.py  test_column_comparer.py  test_dataframe_comparer.py  test_dataframe_generator.py  test_dataframe_transformer.py  test_default_formats.py  test_deprecated.py  test_readme_examples.py  test_row_comparer.py  test_rows_comparer.py  test_schema_comparer.py  test_structfield_comparer.py  test_terminal_str_formatter.py
tests/data/tree_string/: array_containsNull_mismatch.txt  array_element_type_mismatch.txt  array_of_structs_diff.txt  decimal_precision_in_array_and_map.txt  empty_vs_nonempty_schema.txt  it_prints_correctly_for_wide_schemas.txt  it_prints_correctly_for_wide_schemas_different_lengths.txt  it_prints_correctly_for_wide_schemas_ignore_metadata.txt  it_prints_correctly_for_wide_schemas_ignore_nullable.txt  it_prints_correctly_for_wide_schemas_multiple_nested_structs.txt  it_prints_correctly_for_wide_schemas_with_metadata.txt  map_valueContainsNull_mismatch.txt  map_value_type_mismatch.txt  map_with_struct_values_diff.txt  mismatched_complex_kinds.txt  nested_array_of_arrays_diff.txt
tests/formatting/: test_formats.py  test_formatting_config.py  test_terminal_string_formatter.py
