[tool.poetry]
name = "chispa"
version = "0.10.0"
description = "Pyspark test helper library"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]
repository = "https://github.com/MrPowers/chispa"
documentation = "https://mrpowers.github.io/chispa"
readme = "README.md"
license = "MIT"
keywords = ['apachespark', 'spark', 'pyspark', 'pytest']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pyspark = ">3.0.0"
findspark = "1.4.2"
pytest-describe = "^2.1.0"

[tool.poetry.group.mkdocs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings-python = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"
markdown-include = "*"

[tool.poetry.group.mkdocs]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
