[tool.poetry]
name = "chispa"
version = "0.12.0"
description = "Pyspark test helper library"
authors = ["Matthew Powers <matthewkevinpowers@gmail.com>"]
maintainers = [
    "Semyon Sinchenko <ssinchenko@apache.org>",
    "Florian Maas <info@fpgmaas.com>"
]
repository = "https://github.com/MrPowers/chispa"
documentation = "https://mrpowers.github.io/chispa"
readme = "README.md"
license = "MIT"
keywords = ['apachespark', 'spark', 'pyspark', 'pytest']
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
prettytable = ">=3.1,<3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pyspark = "4.0.0"
pytest-describe = "^2.2"
pytest-cov = "^6.2"
pre-commit = "^4.2"
mypy = "^1.16"

[tool.poetry.group.mkdocs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"
markdown-include = "*"
mkdocs-material = "*"

[tool.poetry.group.mkdocs]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "UP"]
ignore = [
    # Line too long
    "E501"
]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
files = ["chispa"]
explicit_package_bases = true
disallow_any_unimported = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
pretty = true
show_error_codes = true
